# pico-sd-ctrl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
src/: CMakeLists.txt  hw_config.c  main.c  read.c  read.h
